--- a/principal_new.html
+++ b/principal_new.html
@@ -28,18 +28,18 @@
 
          .noche {
       --fondo: darkgray;
-      --texto: #f1f1f1;
+      --texto: white;
 
-     --principal: gray;
+     --principal: darkgray;
       --basic: lightgray;  
     }
 
     .tema-azul {
-      --fondo: violet;
-      --texto: #ffffff;
+     --fondo: darkgray;
+      --texto: #f1f1f1;
 
      --principal: gray;
-     --basic: pink;  
+      --basic: lightgray;  
     }
    
         .container {
