--- a/principal_new.html
+++ b/principal_new.html
@@ -27,16 +27,16 @@
         }
 
          .noche {
-      --fondo: darkgray;
+      --fondo: dodgerblue;
       --texto: white;
 
-     --principal: darkgray;
+     --principal: gray;
       --basic: lightgray;  
     }
 
     .tema-azul {
-     --fondo: darkgray;
-      --texto: #f1f1f1;
+     --fondo: dodgerblue;
+      --texto: white;
 
      --principal: gray;
       --basic: lightgray;  
