--- a/principal_new.html
+++ b/principal_new.html
@@ -2313,17 +2313,17 @@ async function getmintedNFT() {
 
 
 
-             await loadImagesFromHex(globalWalletKey, "NFT_image-container");  
-             console.log("loadImagesFromHex(globalWalletKey ",globalWalletKey);
+             //await loadImagesFromHex(globalWalletKey, "NFT_image-container");  
+             //console.log("loadImagesFromHex(globalWalletKey ",globalWalletKey);
 
              const selector = document.getElementById('selector_NFTs');
              selector.innerHTML = '';
 
-             // Crear una opción única
-             const option = document.createElement('option');
-             option.text = 'globalkey';
-             option.value = 'globalkey'; // opcional, si quieres que el value sea igual
-             selector.add(option);
+             //Crear una opción única
+             //const option = document.createElement('option');
+             //option.text = 'globalkey';
+             //option.value = 'globalkey'; // opcional, si quieres que el value sea igual
+             //selector.add(option);
 
 
 
