--- a/principal_new.html
+++ b/principal_new.html
@@ -110,6 +110,46 @@
 }
 </style>
 
+<style>
+      .video-story {
+          position: relative;
+          width: 90vw;
+          max-width: 400px;
+          height: 70vh;
+          margin: 0 auto;
+          border-radius: 15px;
+          overflow: hidden;
+          background: black;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+        }
+
+        .video-story video {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+        }
+
+        .nft-profile-circle {
+          position: absolute;
+          top: 10px;
+          left: 10px;
+          width: 60px;
+          height: 60px;
+          border-radius: 50%;
+          border: 3px solid white;
+          overflow: hidden;
+          box-shadow: 0px 2px 8px rgba(0,0,0,0.5);
+        }
+
+        .nft-profile-circle img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+        }
+</style>  
+
 
 <style>
     .icon-reaction-container {
@@ -1873,6 +1913,7 @@ async function inicializarUI() {
 
    
     //await get_all_publications_home("home-publications-container");
+    await get_video_stories("videoStoriesGallery");
     await get_all_publications_home('recent-home-publications-container', false, "last");
     await get_NFTUsername_profile();
 
