--- a/principal_new.html
+++ b/principal_new.html
@@ -315,6 +315,8 @@
 <script src="reactionsPost.js"></script>
 <script src="recargaCripto.js"></script>
 
+<script src="video_history.js"></script>
+
 
 
 <script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.umd.min.js"></script>
@@ -667,7 +669,7 @@ span.hashtag {
          </div>  </center> 
 
 
-
+         <ul class="video_stories_gallery"></ul> 
          <div id="recent-home-publications-container"></div> 
          <div id="home-publications-container"></div>       
           
