--- a/principal_new.html
+++ b/principal_new.html
@@ -669,7 +669,7 @@ span.hashtag {
          </div>  </center> 
 
 
-         <ul class="video_stories_gallery"></ul> 
+         <ul id="videoStoriesGallery" class="video_stories_gallery"></ul>
          <div id="recent-home-publications-container"></div> 
          <div id="home-publications-container"></div>       
           
