--- a/principal_new.html
+++ b/principal_new.html
@@ -672,6 +672,7 @@ span.hashtag {
 
 
          <div id="videoStoriesContainer"></div>
+         <div id="loadingAnimation-principal" style="display:none;">Cargando...</div>
          <button id="verMasBtn" onclick="get_video_stories('videoStoriesContainer', true)">Ver más</button>
 
          <div id="recent-home-publications-container"></div> 
