--- a/principal_new.html
+++ b/principal_new.html
@@ -672,6 +672,7 @@ span.hashtag {
 
 
          <div id="videoStoriesContainer"></div>
+         <button id="verMasBtn" onclick="get_video_stories('videoStoriesContainer', true)">Ver más</button>
          <script src="video_history.js"></script>
                  
 
