--- a/principal_new.html
+++ b/principal_new.html
@@ -672,8 +672,9 @@ span.hashtag {
 
 
          <div id="videoStoriesContainer"></div>
-         <button id="verMasBtn" onclick="get_video_stories('videoStoriesContainer', true)">Ver más</button>
-         <script src="video_history.js"></script>
+         
+         <!--<button id="verMasBtnVideos" onclick="get_video_stories('videoStoriesContainer', true)">Ver más</button>
+         -->
                  
 
          <div id="recent-home-publications-container"></div> 
