--- a/principal_new.html
+++ b/principal_new.html
@@ -317,6 +317,7 @@
 <script src="reactionsPost.js"></script>
 <script src="recargaCripto.js"></script>
 
+<script src="video_history.js"></script>
 
 
 
