--- a/principal_new.html
+++ b/principal_new.html
@@ -111,45 +111,43 @@
 </style>
 
 <style>
-  .video-story {
-    position: relative;
-    width: 90vw;
-    max-width: 400px;
-    height: 70vh;
-    margin: 20px auto;
-    border-radius: 15px;
-    overflow: hidden;
-    background: black;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    box-shadow: 0px 4px 10px rgba(0,0,0,0.3);
-  }
+ /* 🔹 Contenedor de videos */
+#videoStoriesContainer {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;               /* Espacio entre videos */
+  overflow-x: auto;        /* Scroll horizontal */
+  padding: 10px;
+  background-color: var(--basic); /* Ajusta según tu tema */
+  border-radius: 10px;
+  scrollbar-width: thin;   /* Scroll fino */
+}
 
-  .video-story video {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
+/* 🔹 Cada video-story */
+.video-story {
+  flex: 0 0 auto;          /* Mantener tamaño fijo */
+  width: 200px;            /* Ajusta tamaño de video */
+  text-align: center;
+}
 
-  .nft-profile-circle {
-    position: absolute;
-    top: 10px;
-    left: 10px;
-    width: 60px;
-    height: 60px;
-    border-radius: 50%;
-    border: 3px solid white;
-    overflow: hidden;
-    box-shadow: 0px 2px 8px rgba(0,0,0,0.5);
-  }
+/* 🔹 Videos */
+.video-story video {
+  width: 100%;
+  height: auto;
+  border-radius: 10px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+}
 
-  .nft-profile-circle img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    cursor: pointer;
-  }
+/* 🔹 Imagen de perfil circular */
+.nft-profile-circle img {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  margin-bottom: 5px;
+  cursor: pointer;
+  border: 2px solid #fff;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+}
 </style>
 
 
