--- a/principal_new.html
+++ b/principal_new.html
@@ -1950,10 +1950,12 @@ async function inicializarUI() {
     await getmintedNFT();
 
    
-    await get_all_publications_home("home-publications-container");
+    //await get_all_publications_home("home-publications-container");
+
+     await get_all_publications_home('recent-home-publications-container', false, "last");
     
     await get_video_stories('videoStoriesContainer');
-    //await get_all_publications_home('recent-home-publications-container', false, "last");
+   
     await get_NFTUsername_profile();
 
     // Obtener y mostrar saldos
