--- a/principal_new.html
+++ b/principal_new.html
@@ -800,7 +800,7 @@
 
   <!-- Logo (ocupa 2 filas) -->
   <!--<img src="images/logoSocks.png" alt="Logo" class="logo"> -->
-   <center><div id="NFT_image-container" style=" width:80px;  height: 80px;"> </div></center>
+  <div id="NFT_image-container" style=" width:60px;  height: 60px;"> </div>
 
 
   <!-- 🔸 Fila 1 -->
