--- a/principal_new.html
+++ b/principal_new.html
@@ -39,10 +39,9 @@
 
  
   /* 🔹 Contenedor NFT */
-  /*#NFT_image-container {
+  #NFT_image-container {
     grid-row: span 2;
-    width: 60px;
-    height: 60px;
+    
     border-radius: 50%;
     border: 2px solid white;
     overflow: hidden;
@@ -51,7 +50,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-  }*/
+  }
 
   /* 🔹 Fila 1 */
   .top-row {
@@ -728,7 +727,6 @@
 </ul>
 -->
 
-<div class="input-group" style="display: flex; align-items: center; gap: 10px; margin-bottom: 10px;">
 <!-- 🔹 Barra azul superior -->
 <div class="top-bar">
 
@@ -836,6 +834,7 @@ span.hashtag {
 
 
 
+<div class="input-group" style="display: flex; align-items: center; gap: 10px; margin-bottom: 10px;">
 
 <div id="estado-servidor_msg"></div>
 
