--- a/principal_new.html
+++ b/principal_new.html
@@ -41,7 +41,8 @@
   /* 🔹 Contenedor NFT */
   #NFT_image-container {
     grid-row: span 2;
-    
+    width: 60px;
+    height: 60px;
     border-radius: 50%;
     border: 2px solid white;
     overflow: hidden;
@@ -804,15 +805,10 @@
 </div>
 
 
- 
-  
 
 
 
 
-
-
-</div>
 
  <style>
   /* Estilos para los caracteres @ y # */
